Fix: Loader flickering on load
Fixes an issue where the loader flickers and re-appears during the initial load.

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -126,3 +125,17 @@
   }
 }
 
+@keyframes loader {
+  0% {
+    transform: scaleY(0.1);
+    background: rgba(255, 10, 84, 0.5);
+  }
+  50% {
+    transform: scaleY(1);
+    background: rgba(255, 10, 84, 1);
+  }
+  100% {
+    transform: scaleY(0.1);
+    background: rgba(255, 10, 84, 0.5);
+  }
+}
